@@ -2,14 +2,13 @@
 Testen
 ----------------------------------------------------------------------
 
-fshash
+Session IDs
 
 ----------------------------------------------------------------------
 Wichtig
 ----------------------------------------------------------------------
 
-Hat AVM bei neueren Firmwares das Telefonbuch/Webinterface auf UTF-8
-umgestellt?
+webui_logout einfügen
 
 ----------------------------------------------------------------------
 Demnächst anschauen
