@@ -1,7 +1,7 @@
 ##
 ## Callmonitor for Fritz!Box (callmonitor)
 ## 
-## Copyright (C) 2005--2008  Andreas Bühmann <buehmann@users.berlios.de>
+## Copyright (C) 2005--2009  Andreas Bühmann <buehmann@users.berlios.de>
 ## 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -21,9 +21,6 @@
 ##
 require url
 
-WEBCM_DIR=/usr/www/html/cgi-bin
-WEBCM=$WEBCM_DIR/webcm
-
 webui_post_form_generic() {
     local cgi=$1 post_data=$2
     echo -n "$post_data" |
@@ -32,22 +29,107 @@ webui_post_form_generic() {
     CONTENT_LENGTH=${#post_data} \
     "$cgi"
 }
+
+WEBCM_DIR=/usr/www/html/cgi-bin
+WEBCM=$WEBCM_DIR/webcm
+
+## Firmware version xx.04.74 introduces session IDs
+##
+## The session ID will be held in the environment variable WEBUI_SID
+## and be used transparently by functions such as webui_get and 
+## webui_post_form.
+##
+## webui_login and webui_logout start and terminate a session, respectively.
+## If a firmware is used that does not support SIDs, webui_login falls back
+## to the old login technique (and webui_logout is a no-op).
+##
+## See also: AVM Technical Note, Session IDs und geändertes Login-Verfahren im
+## FRITZ!Box Webinterface, 
+## http://www.avm.de/de/Extern/Technical_Note_Session_ID.pdf
+
+## Convert login_sid.xml to shell variables
+##
+## <?xml version="1.0" encoding="utf-8"?>
+## <SessionInfo>
+## <iswriteaccess><? echo $var:iswriteaccess ?></iswriteaccess>
+## <SID><? echo $var:sid ?></SID>
+## <Challenge><? query security:status/challenge ?></Challenge>
+## </SessionInfo>
+##
+## Login information may be passed as a parameter to minimize the number of
+## requests
+##
+webui_login_sid() {
+    [ -e "/var/html/html/login_sid.xml" ] || return 1
+    local info=$(webui_post_form "${1:+$1&}getpage=../html/login_sid.xml")
+    case $info in
+    	*SessionInfo*)
+	    local _ key value
+	    echo "$info" | while IFS="<>" read -r _ key value _; do
+		case $key in
+		    iswriteaccess|SID|Challenge)
+		    	echo "$key='$value'"
+		    ;;
+		esac
+	    done
+	    return 0
+	;;
+	*)
+	    return 2
+	;;
+    esac
+}
+
+## Login (and obtain a session id)
+webui_login() {
+    local password=$(webui_password) sinfo
+    sinfo=$(webui_login_sid)
+    if [ $? -ne 0 ]; then
+	## old login
+	unset WEBUI_SID
+	if ! empty "$password"; then
+	    webui_post_form "login:command/password=$(urlencode "$password")" \
+	    > /dev/null
+	fi
+    else
+	## new login
+	local iswriteaccess SID Challenge
+	eval "$sinfo"
+	if [ ${iswriteaccess:-0} -eq 0 ]; then
+
+    	    ## we are being challenged
+	    local md5="$(echo -n "$Challenge-$password" |
+	    	sed -e 's/./&\n/g' | tr '\n' '\0' | md5sum)"
+	    md5=${md5%% *}
+	    local response="$Challenge-$md5"
+
+    	    ## respond and (hopefully) receive a SID
+	    unset iswriteaccess SID Challenge
+	    sinfo=$(webui_login_sid "login:command/response=$response") &&
+		eval "$sinfo"
+	fi
+	WEBUI_SID=$SID
+    fi
+}
+
+## Terminate the current session
+webui_logout() {
+    if ! empty "$WEBUI_SID"; then
+	webui_post_form "security:command/logout=" > /dev/null
+	unset WEBUI_SID
+    fi
+}
+
 webui_post_form() (
     cd "$WEBCM_DIR"
-    local post_data=$1 REMOTE_ADDR=127.0.0.1
+    local post_data="${WEBUI_SID:+sid=$WEBUI_SID&}$1" REMOTE_ADDR=127.0.0.1
     webui_post_form_generic "$WEBCM" "$post_data"
 )
 webui_get() (
     cd "$WEBCM_DIR"
-    REQUEST_METHOD=GET REMOTE_ADDR=127.0.0.1 QUERY_STRING=$1 "$WEBCM"
+    REQUEST_METHOD=GET REMOTE_ADDR=127.0.0.1 \
+    QUERY_STRING="$1${WEBUI_SID:+sid=$WEBUI_SID&}$1" "$WEBCM"
 )
-webui_login() {
-    local password=$(webui_password)
-    if ! empty "$password"; then
-	webui_post_form "login:command/password=$(urlencode "$password")" \
-	> /dev/null
-    fi
-}
 
 webui_config() {
     cfg2sh ar7 webui
